Initial BP checkpoint
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@33345 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/bounded-pointers-branch/gcc/config/i386/i386.md
+++ b/bounded-pointers-branch/gcc/config/i386/i386.md
@@ -10122,3 +10122,67 @@
     return \"call\\t%*%1\";
 }"
   [(set_attr "type" "callv")])
+
+(define_insn "trap"
+  [(trap_if (const_int 1) (const_int 5))]
+  ""
+  "int\\t$5")
+
+;;; ix86 doesn't have conditional traps, but we fake them for the sake
+;;; of bounds checking.  By emitting bounds checks as conditional
+;;; traps rather than as conditional jumps around unconditional traps
+;;; we avoid introducing spurious basic-block boundaries and facilitate
+;;; elimination of redundant checks.
+
+(define_expand "conditional_trap"
+  [(trap_if (match_operator 0 "comparison_operator"
+	     [(match_dup 2) (const_int 0)])
+	    (match_operand 1 "const_int_operand" ""))]
+  ""
+  "
+{
+  emit_insn (gen_rtx_TRAP_IF (VOIDmode,
+			      ix86_expand_compare (GET_CODE (operands[0])),
+			      operands[1]));
+  DONE;
+}")
+
+(define_insn ""
+  [(trap_if (match_operator 0 "comparison_operator"
+	     [(reg 17) (const_int 0)])
+	    (match_operand 1 "const_int_operand" ""))]
+  ""
+  "j%c0\\t1f\;int\\t%1\\n1:")
+
+;;; when optimizing for size, emit the `bound' instruction
+;;; to perform bounds checks whenever we see consecutive conditional traps
+;;; that compare a register against low and high bounds.
+
+;;; This approach appears to work, but suffers from some flaws: the
+;;; stored bounds are [base..extent), but the bound instruction
+;;; expects [base..extent].  The bound instruction expects the base
+;;; and extent to be in consecutive memory words, but gcc likes to
+;;; stuff them in registers, unless we pass -fno-force-mem.  Even so,
+;;; it sometimes screws up and reverses the order of the args.
+
+;;; (define_insn "check_bounds"
+;;;   [(check_bounds_rtx (match_operand 0 "register_operand" "")
+;;; 		     (match_operand 1 "memory_operand" "")
+;;; 		     (match_operand 2 "memory_operand" ""))]
+;;;   "optimize_size"
+;;;   "bound{l}\\t%0, %1")
+;;; 
+;;; (define_peephole2
+;;;   [(set (reg 17)
+;;;         (compare (match_operand 0 "register_operand" "")
+;;; 		 (match_operand 1 "memory_operand" "")))
+;;;    (trap_if (ltu (reg 17) (const_int 0))
+;;; 		 (match_operand 2 "const_int_operand" ""))
+;;;    (set (reg 17)
+;;;         (compare (match_dup 0)
+;;; 		 (match_operand 3 "memory_operand" "")))
+;;;    (trap_if (geu (reg 17) (const_int 0))
+;;; 		 (match_dup 2))]
+;;;   "optimize_size"
+;;;   [(check_bounds_rtx (match_dup 0) (match_dup 1) (match_dup 3))]
+;;;   "")
