--- a/condexec-branch/gcc/ChangeLog.CE
+++ b/condexec-branch/gcc/ChangeLog.CE
@@ -2,6 +2,8 @@
 
 	* condexec.c (noce_try_cmove_arith): Also fail if no insn_a.
 
+	* condexec.c (find_if_case_2): Don't die if then_bb is EXIT.
+
 2000-04-25  Richard Henderson  <rth@cygnus.com>
 
 	* condexec.c (noce_process_if_block): Reject insn_b from test_bb
