* config/i386/i386.md: Add fake SImode setcc patterns and splitter.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@33455 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/condexec-branch/gcc/config/i386/i386.md
+++ b/condexec-branch/gcc/config/i386/i386.md
@@ -6890,6 +6890,36 @@
   ""
   "set%C1\\t%0"
   [(set_attr "type" "setcc")])
+
+;; These exist so that if-conversion has more options.  Note that it
+;; won't generate a clobber of the flags, so we can't rely on that.
+
+(define_insn "*setcc_si_1"
+  [(set (match_operand:SI 0 "register_operand" "=q")
+	(match_operator:SI 1 "no_comparison_operator"
+	  [(reg 17) (const_int 0)]))]
+  ""
+  "#")
+
+(define_insn "*setcc_si_2"
+  [(set (match_operand:SI 0 "register_operand" "=q")
+	(match_operator:SI 1 "uno_comparison_operator"
+	  [(reg:CC 17) (const_int 0)]))]
+  ""
+  "#")
+
+(define_split
+  [(set (match_operand:SI 0 "register_operand" "=q")
+	(match_operator:SI 1 "comparison_operator"
+	  [(reg 17) (const_int 0)]))]
+  ""
+  [(set (subreg:QI (match_dup 0) 0) (match_dup 1))
+   (set (match_dup 0) (zero_extend:SI (subreg:QI (match_dup 0) 0)))]
+  "
+{
+  operands[1] = gen_rtx_fmt_ee (GET_CODE (operands[1]), QImode,
+				XEXP (operands[1], 0), const0_rtx);
+}")
 
 ;; Basic conditional jump instructions.
 ;; We ignore the overflow flag for signed branch instructions.
