* ifcvt.c: Rename from condexec.c.         * Makefile.in: Update all references.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@33530 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/condexec-branch/gcc/ChangeLog.CE
+++ b/condexec-branch/gcc/ChangeLog.CE
@@ -1,3 +1,8 @@
+2000-04-28  Richard Henderson  <rth@cygnus.com>
+
+	* ifcvt.c: Rename from condexec.c.
+	* Makefile.in: Update all references.
+
 2000-04-26  Richard Henderson  <rth@cygnus.com>
 
 	* condexec.c (noce_emit_store_flag): New.
