--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-09  Bruce Korb  <bkorb@gnu.org>
+
+	* fixinc/fixinc.sco:  Oh, yes, we don't need this any more.
+
 Tue May  9 16:30:27 MET DST 2000  Jan Hubicka  <jh@suse.cz>
 
 	* calls.c (expand_call): Reorganize somewhat in order
