* gcc.c (used_arg): Skip over a semicolon at the end of the 	split-up loop; don't break out of it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33807 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-05-09  Zack Weinberg  <zack@wolery.cumb.org>
 
+	* gcc.c (used_arg): Skip over a semicolon at the end of the
+	split-up loop; don't break out of it.
+
 	* Makefile.in (WARN_CFLAGS): Add -Wwrite-strings.
 	(tree.o): Depend on output.h.
 
