--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Tue May  9 18:54:16 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* reload1.c (reload_combine): Fix errors in last change.
+
 2000-05-09  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* gcc.c (used_arg): Skip over a semicolon at the end of the
