--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-09  Richard Henderson  <rth@cygnus.com>
+
+	* calls.c (expand_call): Increment currently_expanding_call
+	before calling optimize_tail_recursion.
+
 Tue May  9 18:54:16 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* reload1.c (reload_combine): Fix errors in last change.
