2000-05-10  Bryce McKinlay  <bryce@albatross.co.nz>
	* java/lang/StringBuffer.java (replace): Calculate length for
	arraycopy() correctly.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33822 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -6,6 +6,8 @@
 	(replace): Reimplemented. Fix javadoc.
 	(reverse): Call ensureCapacity_unsynchronized().
 	(StringBuffer (String)): Use DEFAULT_CAPACITY.
+
+	(replace): Calculate length for arraycopy() correctly.
 	
 2000-05-09  Tom Tromey  <tromey@cygnus.com>
 
