reg_syntax_t re_syntax_options must be static scope
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33825 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-05-10  Bruce Korb  <bkorb@gnu.org>
+
+	* fixinc/gnu-regex.c:  reg_syntax_t re_syntax_options must be static
+
 2000-05-10  Eric Schweitz  <schweitz@nortelnetworks.com>
 
 	* dwarfout.c (dwarfout_finish): Call retry_incomplete_types
