* cppexp.c (lex): Use %.*s to print non-NUL-terminated string. 	Make error message friendlier.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@33829 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2000-05-10  Zack Weinberg  <zack@wolery.cumb.org>
 
+	* cppexp.c (lex): Use %.*s to print non-NUL-terminated string.
+	Make error message friendlier.
+
 	* cpphash.h (struct hashnode): Use struct hack for name
 	member.
 	* cpphash.c (struct hashdummy): New.
